--- a/src/index.css
+++ b/src/index.css
@@ -143,11 +143,11 @@
 .GrimoureContent header h2 {font-size: 27px; font-weight: bold !important;}
 .GrimoureContent header p {font-size: 13px; font-weight: normal !important;}
 .ListOfThings {width: 100%; text-align: center; display: inline-block; margin: 20px auto;max-width: 600px;}
-.web2ActionBTN {display: inline-block; padding: 4px 13px; background-color: #7474f7; color: #ffffff; border-radius: 20px; font-size: 14px; font-weight: bold; cursor: pointer;}
+.web2ActionBTN {display: inline-block; padding: 4px 13px; background-color: #9e6915; color: #ffffff; border-radius: 20px; font-size: 14px; font-weight: bold; cursor: pointer;}
 .web2ActionBTN:hover {color: #ffffff; text-decoration: none;}
 .web2ActionBTN:disabled {font-weight: normal !important;}
-.backActionBTN {width: 100%; text-align: center; display: inline-block; margin: 20px auto;max-width: 600px;}
-.backActionBTN:hover {color: #ffffff; text-decoration: none;}
+.backActionBTN {display: inline-block; padding: 4px 13px; border:1px solid #9e6915; color: #9e6915; border-radius: 20px; font-size: 14px; font-weight: normal; cursor: pointer;}
+.backActionBTN:hover {color: #9e6915; text-decoration: none;}
 .backActionBTN:disabled {font-weight: normal !important;}
 
 
@@ -157,12 +157,15 @@
 .SortSection .TextRegular {width: 45%; margin: 0 2.5%;}
 .ImgStand {width: 30px; height: 30px; display: inline-block;}
 .FarmContract {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border: 1px solid; border-radius: 12px; padding: 3%; text-align: left;}
-.FarmTitle {width: 40%; display: inline-block; margin-right: 1%; text-align: left;height: 90px;}
+.FarmContractOpen {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border-bottom: 1px solid; border-radius: 0px; padding: 3%; text-align: left;}
+.FarmTitle {width: 40%; display: inline-block; margin-right: 1%; text-align: left;}
 .FarmTitle figure {display: inline-block; width: 40%; text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px; margin-bottom: 5px; vertical-align: middle;}
 .FarmTitle figure img {display: inline-block; width: 45px; max-height: 90px; vertical-align: middle;}
-.FarmTitle figure h6 {font-size: 18px;}
+.FarmTitle aside h6 {font-size: 16px; text-align: center; display: inline-block; width: 95%;}
 .FarmTitle aside {width: 60%;display: inline-block;text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px; margin-bottom: 5px; vertical-align: middle;}
-.FarmThings {width: 55%; margin-left: 2%; display: inline-block; vertical-align: middle;}
+.FarmThings {width: 55%; margin-left: 4%; display: inline-block; vertical-align: middle;}
+.FarmThings p {display: inline-block; width: 95%; font-size: 14px; margin-bottom: 5px;}
+.FarmThings p a {text-decoration: underline !important;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -183,7 +186,7 @@
 
 .penguin {background: rgb(58,60,106);background: linear-gradient(135deg, rgba(58,60,106,1) 0%, rgba(0,0,0,1) 41%);}
 .penguin .dapp-container {background-color: #2d2e40 !important;box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px;}
-.penguin .sidebar-menu-link, .penguin .nav-link, .penguin .fantasyMenu:hover, .penguin .fantasyMenu, .penguin .form-check-label, .penguin .infoList, .penguin .StatsBro, .penguin .StatsBroO, .penguin .IndexRegular, .penguin .Web3, .penguin .disclamer, .penguin .TitleCov, .penguin .xTitle, .penguin .StatsIndicator a, .penguin .QuestionRegular label,.penguin .DisclamerRegular p, .penguin .InputTokensRegular p, .penguin .Resultsregular p, .penguin .Resultsregular p, .penguin .Rebalance aside h6, .penguin .Rebalance aside p {color: #ffffff;}
+.penguin .sidebar-menu-link, .penguin .nav-link, .penguin .fantasyMenu:hover, .penguin .fantasyMenu, .penguin .form-check-label, .penguin .infoList, .penguin .StatsBro, .penguin .StatsBroO, .penguin .IndexRegular, .penguin .Web3, .penguin .disclamer, .penguin .TitleCov, .penguin .xTitle, .penguin .StatsIndicator a, .penguin .QuestionRegular label,.penguin .DisclamerRegular p, .penguin .InputTokensRegular p, .penguin .Resultsregular p, .penguin .Resultsregular p, .penguin .Rebalance aside h6, .penguin .Rebalance aside p, .penguin .FarmThings p, .penguin .FarmTitle aside h6 {color: #ffffff;}
 .penguin .custom-control-label::before, .penguin .custom-file-label, .penguin .custom-select, .penguin .custom-select:focus {transition: none; background: url("./assets/images/arrowdown.png") right 0.75rem center/15px 10px no-repeat;border-color: #9e6915 !important; box-shadow: none;}
 .penguin .token-filter-input {border-color: #9e6915 !important;}
 .penguin .wusd-pair-select, .penguin .token-filter-input {background-color: #2d2e40 !important; color: #ffffff;}
@@ -191,7 +194,7 @@
 .penguin .BtnConnect {border: 1px solid #7474f7; color: #7474f7;}
 .penguin .BtnConnectAfter {border: 1px solid #9e6915; color: #9e6915;}
 .penguin .FooterP p {color: #adadad;}
-.penguin .FooterP p a, .penguin .disclamer a {font-weight: bold; color: #adadad !important;}
+.penguin .FooterP p a, .penguin .disclamer a, .penguin .FarmThings p a {font-weight: bold; color: #adadad !important;}
 .penguin .card {border: 1px solid #000000; color: #ffffff;}
 .penguin .StatsLink a {border: 1px solid #9e6915; color: #9e6915;text-decoration: none;}
 .penguin .StatsLink a:hover {color: #9e6915; text-decoration: none !important;}
@@ -201,7 +204,7 @@
 .penguin .TextRegular {border-color: #9e6915; color: #9e6915;}
 .penguin .input-group-text {background-color: transparent;border-top: 1px solid #9e6915; border-right: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-left: 0px solid #9e6915; color: #ffffff;}
 .penguin .form-control, .penguin .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #ffffff;}
-
+.penguin .FarmContract {border-color: #4d4c4a;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
@@ -216,7 +219,7 @@
 .magic .form-check-label {color: #000000;}
 .magic .IndexRegular {color: #000000;}
 .magic .FooterP p {color: #636363;}
-.magic .FooterP p a, .magic .disclamer a {font-weight: bold; color: #636363 !important;}
+.magic .FooterP p a, .magic .disclamer a, .magic .FarmThings p a {font-weight: bold; color: #636363 !important;}
 .magic .card {border: 1px solid #aaaaaa; color: #000000;}
 .magic .StatsLink a {border: 1px solid #9e6915; color: #9e6915;}
 .magic .StatsLink a:hover {color: #9e6915;text-decoration: none !important;}
@@ -226,7 +229,7 @@
 .magic .TextRegular {border-color: #9e6915; color: #9e6915;}
 .magic .input-group-text {background-color: transparent;border-top: 1px solid #9e6915; border-right: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-left: 0px solid #9e6915; color: #000000;}
 .magic .form-control, .magic .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #000000;}
-
+.magic .FarmContract {border-color: #ebebeb;}
 
 
 @media only screen and (max-device-width: 750px) {
