--- a/src/index.css
+++ b/src/index.css
@@ -169,10 +169,16 @@
 .FarmThings p a {text-decoration: underline !important;}
 .FarmSetupMain {width: 100%; display: inline-block;}
 .FarmSetupMain h5 {width: 40%; display: inline-block; font-size: 16px; vertical-align: top;}
+.FarmSetupMain h5 a {font-size: 11px; margin: 5px 5px; display: inline-block; padding: 2px 5px; border-radius: 5px; cursor: pointer;}
 .FarmSetupMain aside {width: 55%; display: inline-block;vertical-align: top; margin-left: 2%;}
 .FarmSetupMain aside p {font-size: 12px; width: 100%; text-align: right; margin-bottom: 5px;}
-.SetupFarmingInstructions {width: 100%; display: inline-block; margin-top: 10px;}
+.SetupFarmingInstructions {width: 100%; display: inline-block; margin-top: 10px; text-align: center;}
+.SetupFarmingInstructions p {display: inline-block; font-size: 16px; margin-bottom: 2px;}
+.SetupFarmingInstructions p span {font-size: 12px;}
+.SetupFarmingInstructions figure {display: inline-block; margin-right: 5px;}
 .SetupFarmingInstructions img {width: 40px; height: auto;}
+.SetupFarmingOthers {display: inline-block; width: 65%; margin: 5px 1%;}
+.SetupFarmingOthers p {font-size: 13px; margin: 5px; display: inline-block;}
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -203,8 +209,8 @@
 .penguin .FooterP p {color: #adadad;}
 .penguin .FooterP p a, .penguin .disclamer a, .penguin .FarmThings p a {font-weight: bold; color: #adadad !important;}
 .penguin .card {border: 1px solid #000000; color: #ffffff;}
-.penguin .StatsLink a {border: 1px solid #9e6915; color: #9e6915;text-decoration: none;}
-.penguin .StatsLink a:hover {color: #9e6915; text-decoration: none !important;}
+.penguin .StatsLink a, .penguin .FarmSetupMain h5 a {border: 1px solid #9e6915; color: #9e6915;text-decoration: none;}
+.penguin .StatsLink a:hover, .penguin .FarmSetupMain h5 a:hover {color: #9e6915; text-decoration: none !important;}
 .penguin .nav-item-selected {border-bottom: 8px solid #7474f7;}
 .penguin .health-bar {background-color: #1c1c27;}
 .penguin .SelectRegular {border-color: #9e6915; color: #9e6915;}
@@ -228,8 +234,8 @@
 .magic .FooterP p {color: #636363;}
 .magic .FooterP p a, .magic .disclamer a, .magic .FarmThings p a {font-weight: bold; color: #636363 !important;}
 .magic .card {border: 1px solid #aaaaaa; color: #000000;}
-.magic .StatsLink a {border: 1px solid #9e6915; color: #9e6915;}
-.magic .StatsLink a:hover {color: #9e6915;text-decoration: none !important;}
+.magic .StatsLink a, .magic .FarmSetupMain h5 a {border: 1px solid #9e6915; color: #9e6915;}
+.magic .StatsLink a:hover, .magic .FarmSetupMain h5 a:hover {color: #9e6915;text-decoration: none !important;}
 .magic .nav-item-selected {border-bottom: 8px solid #7474f7;}
 .magic .health-bar {background-color: #ebebeb;}
 .magic .SelectRegular {border-color: #9e6915; color: #9e6915;}
