--- a/src/index.css
+++ b/src/index.css
@@ -151,14 +151,15 @@
 .backActionBTN:hover {color: #9e6915; text-decoration: none;}
 .backActionBTN:disabled {font-weight: normal !important;}
 
-
 .MainExploration {width: 95%; display: inline-block; margin: 10px auto;}
 .SortSection {width: 100%; text-align: center; display: inline-block; margin: 10px auto; min-width: 600px;} 
 .SortSection .SelectRegular {width: 45%; margin: 0 2.5%;}
 .SortSection .TextRegular {width: 45%; margin: 0 2.5%;}
 .ImgStand {width: 30px; height: 30px; display: inline-block;}
 .FarmContract, .FarmSetup {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border: 1px solid; border-radius: 12px; padding: 3%; text-align: left;}
+.InflationContract {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border: 1px solid; border-radius: 12px; padding: 3%; text-align: left;}
 .FarmContractOpen {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border-bottom: 1px solid; border-radius: 0px; padding: 3%; text-align: left;}
+.InflationContractOpen {width: 100%; display: inline-block; margin: 10px auto; min-width: 600px; border-radius: 0px; padding: 3%; text-align: left;}
 .FarmTitle {width: 40%; display: inline-block; margin-right: 1%; text-align: left;}
 .FarmTitle figure {display: inline-block; width: 40%; text-align: center;margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px; margin-bottom: 5px; vertical-align: middle;}
 .FarmTitle figure img {display: inline-block; width: 45px; max-height: 90px; vertical-align: middle;}
@@ -181,6 +182,24 @@
 .SetupFarmingOthers p {font-size: 13px; margin: 5px; display: inline-block;}
 .SetupFarmingOthers p span {font-size: 11px;}
 .SetupFarmingBotton {display: inline-block; width: 30%; vertical-align: middle; text-align: right;}
+.InflationContract h4 {font-size: 20px; display: inline-block; width: 70%; font-weight: bold; vertical-align: middle; margin-bottom: 20px;}
+.InflationContractLinks {display: inline-block; width: 28%; text-align: right;vertical-align: middle;}
+.InflationContractLinks a {font-size: 11px; margin: 5px 5px; display: inline-block; padding: 2px 5px; border-radius: 5px; cursor: pointer;}
+.InflationContract p {font-size: 13px; display: inline-block; vertical-align: middle; width: 60%;}
+.InflationContract .InflationContractButton {width: 30%; margin-left: 9%; display: inline-block; vertical-align: middle; text-align: right;}
+.InflationContractAll {width: 100%; display: inline-block;}
+.InflationContractOpen h3 {font-size: 30px; width: 70%; text-align: left; display: inline-block; font-weight: bold; vertical-align: middle;}
+.InflationContractOpenBack {width: 29%; text-align: right; display: inline-block; vertical-align: middle;} 
+.TokenOperation {width: 95%; text-align: left; display: inline-block; margin: 10px auto; border: 1px solid; padding: 2%; border-radius: 12px;}
+.TokenOperation h6 {font-size: 20px; font-weight: bold; display: inline-block; width: 28%; vertical-align: middle; margin-block-start: 0em;margin-block-end: 0em;margin-inline-start: 0px;margin-inline-end: 0px; margin-bottom: 0;}
+.TokenOperation p {font-size: 16px; width: 100%; display: inline-block; margin-top: 20px;}
+.TokenOperation p img {width: 25px; margin: auto 5px; display: inline-block;}
+.TokenOperationLinks {display: inline-block; width: 71%; vertical-align: middle; text-align: left;}
+.TokenOperationLinks a {font-size: 11px; margin: 5px 5px; display: inline-block; padding: 2px 5px; border-radius: 5px; cursor: pointer;}
+.TokenOperationExecute {width: 100%; text-align: center; display: inline-block; margin: 30px auto;}
+.TokenOperationExecute h5 {font-size: 18px; font-weight: normal; vertical-align: middle; display: inline-block; margin: auto 5px;}
+.TokenOperationExecute .SelectRegular {width: 20%;margin: auto 5px; display: inline-block; vertical-align: middle;}
+
 
 .fantasy {background-color: #4d4c4a !important;}
 .fantasy .LogoM {background-position: 0 -50px;}
@@ -211,15 +230,15 @@
 .penguin .FooterP p {color: #adadad;}
 .penguin .FooterP p a, .penguin .disclamer a, .penguin .FarmThings p a {font-weight: bold; color: #adadad !important;}
 .penguin .card {border: 1px solid #000000; color: #ffffff;}
-.penguin .StatsLink a, .penguin .FarmSetupMain h5 a {border: 1px solid #9e6915; color: #9e6915;text-decoration: none;}
-.penguin .StatsLink a:hover, .penguin .FarmSetupMain h5 a:hover {color: #9e6915; text-decoration: none !important;}
+.penguin .StatsLink a, .penguin .FarmSetupMain h5 a, .penguin .InflationContractLinks a, .penguin .TokenOperationLinks a {border: 1px solid #9e6915; color: #9e6915;text-decoration: none;}
+.penguin .StatsLink a:hover, .penguin .FarmSetupMain h5 a:hover, .penguin .InflationContractLinks a:hover, .penguin .TokenOperationLinks a:hover {color: #9e6915; text-decoration: none !important;}
 .penguin .nav-item-selected {border-bottom: 8px solid #7474f7;}
 .penguin .health-bar {background-color: #1c1c27;}
 .penguin .SelectRegular {border-color: #9e6915; color: #9e6915;}
 .penguin .TextRegular {border-color: #9e6915; color: #9e6915;}
 .penguin .input-group-text {background-color: transparent;border-top: 1px solid #9e6915; border-right: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-left: 0px solid #9e6915; color: #ffffff;}
 .penguin .form-control, .penguin .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #ffffff;}
-.penguin .FarmContract, .penguin .FarmContractOpen, .penguin .FarmSetup {border-color: #4d4c4a;}
+.penguin .FarmContract, .penguin .FarmContractOpen, .penguin .FarmSetup, .penguin .InflationContract, .penguin .TokenOperation {border-color: #4d4c4a;}
 
 
 .magic {background: rgb(210,208,247);background: linear-gradient(135deg, rgba(210,208,247,1) 0%, rgba(253,247,245,1) 41%);}
@@ -236,15 +255,15 @@
 .magic .FooterP p {color: #636363;}
 .magic .FooterP p a, .magic .disclamer a, .magic .FarmThings p a {font-weight: bold; color: #636363 !important;}
 .magic .card {border: 1px solid #aaaaaa; color: #000000;}
-.magic .StatsLink a, .magic .FarmSetupMain h5 a {border: 1px solid #9e6915; color: #9e6915;}
-.magic .StatsLink a:hover, .magic .FarmSetupMain h5 a:hover {color: #9e6915;text-decoration: none !important;}
+.magic .StatsLink a, .magic .FarmSetupMain h5 a, .magic .InflationContractLinks a, .magic .TokenOperationLinks a {border: 1px solid #9e6915; color: #9e6915;}
+.magic .StatsLink a:hover, .magic .FarmSetupMain h5 a:hover, .magic .InflationContractLinks a:hover, .magic .TokenOperationLinks a:hover {color: #9e6915;text-decoration: none !important;}
 .magic .nav-item-selected {border-bottom: 8px solid #7474f7;}
 .magic .health-bar {background-color: #ebebeb;}
 .magic .SelectRegular {border-color: #9e6915; color: #9e6915;}
 .magic .TextRegular {border-color: #9e6915; color: #9e6915;}
 .magic .input-group-text {background-color: transparent;border-top: 1px solid #9e6915; border-right: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-left: 0px solid #9e6915; color: #000000;}
 .magic .form-control, .magic .form-control:focus {background-color: transparent;border-top: 1px solid #9e6915; border-left: 1px solid #9e6915; border-bottom: 1px solid #9e6915; border-right: 0px solid #9e6915; color: #000000;}
-.magic .FarmContract, .magic .FarmContractOpen, .magic .FarmSetup {border-color: #ebebeb;}
+.magic .FarmContract, .magic .FarmContractOpen, .magic .FarmSetup, .magic .InflationContract, .magic .TokenOperation {border-color: #ebebeb;}
 
 
 @media only screen and (max-device-width: 750px) {
